<resources>
    <string name="app_name">SMobile</string>
    <string name="premier_league">Premier League</string>
    <string name="rank">%1$d.</string>
    <string name="value">%1$d</string>
    <string name="age">Age: %1$d</string>
    <string name="goals">Goals: %1$d</string>
    <string name="assists">Assists: %1$d</string>
    <string name="passes">Passes: %1$d</string>
    <string name="team_logo">Team Logo</string>
    <string name="club">Club</string>
    <string name="played">Pl</string>
    <string name="points">Pts</string>
    <string name="lost">L</string>
    <string name="drawn">D</string>
    <string name="won">W</string>
    <string name="position">Pos</string>
    <string name="team_players">Team Players</string>
    <string name="compare_players">Compare Players</string>
    <string name="head_to_head">Head To Head</string>
    <string name="players_already_selected">Players have already been selected, deselect the player first.</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="english">English</string>
    <string name="serbian">Serbian</string>
    <string name="back">Back</string>
</resources>