<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:layout_width="@dimen/rank_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="@dimen/medium_padding"
        android:text="@string/position"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/avatar"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:contentDescription="@string/team_logo"
        android:gravity="center"
        android:padding="@dimen/logo_padding"
        android:text="@string/club"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:src="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/logo_padding"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        style="@style/StandingsColumnTextView"
        android:text="@string/played" />

    <TextView
        style="@style/StandingsColumnTextView"
        android:text="@string/won" />

    <TextView
        style="@style/StandingsColumnTextView"
        android:text="@string/drawn" />

    <TextView
        style="@style/StandingsColumnTextView"
        android:text="@string/lost" />

    <TextView
        style="@style/StandingsColumnTextView"
        android:layout_weight="0.5"
        android:text="@string/points" />

</LinearLayout>