<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    app:startDestination="@id/teamFragment">

    <fragment
        android:id="@+id/teamFragment"
        android:name="com.smobile.premierleague.ui.team.TeamFragment"
        android:label="@string/team_players">
        <argument
            android:name="teamId"
            app:argType="integer" />
        <action
            android:id="@+id/showHeadToHead"
            app:destination="@id/headToHeadFragment" />
    </fragment>
    <fragment
        android:id="@+id/headToHeadFragment"
        android:name="com.smobile.premierleague.ui.headtohead.HeadToHeadFragment"
        android:label="@string/head_to_head">
        <argument
            android:name="playerOneId"
            app:argType="integer" />
        <argument
            android:name="playerTwoId"
            app:argType="integer" />
        <argument
            android:name="teamId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.smobile.premierleague.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>
